# redclaw

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  agents.md  config.example.json  redclaw  roadmap.md  technical_specs.md
src/: config.rs  lib.rs  main.rs  utils.rs
src/agent/: channels.rs  llm.rs  memory.rs  mod.rs
src/tools/: builtin.rs  mod.rs  registry.rs
tests/: basic_test.rs  mock_test.rs
