[package]
name = "redclaw"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
ctrlc = "3.4"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
incremental = false

[profile.release.package."*"]
opt-level = "z"
